--- a/src/others/pyextrae/common/extrae.py.in
+++ b/src/others/pyextrae/common/extrae.py.in
@@ -11,7 +11,7 @@ from collections import defaultdict
 
 USRFUNC_EV = 60000100
 
-ExtraeHome     = "@sub_PREFIX@"
+ExtraeHome     = os.getenv("EXTRAE_HOME")
 LibrarySeq     = ExtraeHome + "/lib/libseqtrace.so"
 LibrarySubProc = "./.libseqtrace-subprocess.so" 
 
@@ -45,7 +45,7 @@ def pyEx_trace_hook(frame, event, arg):
         pyEx_trace_fini()
 
     ### Detect the call to a traced function
-    if Extrae and (os.getpid() in Extrae) and function and Traced_Functions and function in Traced_Functions:   
+    if Extrae and (os.getpid() in Extrae) and function and Traced_Functions and function in Traced_Functions and event not in ["c_call", "c_return"]:
       #caller = frame.f_back
       #if caller:
       #  caller_line_no  = caller.f_lineno
